tests/macros/unknown/option.rs
fn main() {
    let q = requestty::questions![Input { unknown: 0 }];
}
